--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-
 ---
 
 <html lang="en">
@@ -11,6 +10,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Mi sitio Astro</h1>
 	</body>
 </html>
