new pages about and blog

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,10 @@
 	</head>
 	<body>
 		<h1>Mi sitio Astro Test</h1>
-		<a href="/about">Sobre mi</a>
+		<h2>... ¡Y mi nuevo sitio Astro!</h2>
+		<p>Estoy trabajando en el tutorial introductorio de astro. Esta es la segunda página de mi web</p>
+		<p>Este sitio se irá actualizando a medida que vaya completando mas partes del tutorial</p>
+		<a href="/">Inicio</a>
 		<a href="/blog">Blog</a>
 	</body>
 </html>
