--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,7 +12,10 @@
 	</head>
 	<body>
 		<h1>Mi sitio Astro Test</h1>
+		<h1>Mi Blog de aprendizaje</h1>
+		<p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+		<a href="/">Inicio</a>
 		<a href="/about">Sobre mi</a>
-		<a href="/blog">Blog</a>
+		
 	</body>
 </html>
