--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,6 +16,11 @@
 		<p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
 		<a href="/">Inicio</a>
 		<a href="/about">Sobre mi</a>
+		<ul>
+			<li><a href="/posts/post-1">Mi primera publicación</a></li>
+			<li><a href="/posts/post-2">Mi segunda publicación</a></li>
+			<li><a href="/posts/post-3">Mi tercera publicación</a></li>
+		</ul>
 		
 	</body>
 </html>
