--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+
 const pageTitle = "Sobre mi";
 
 const identity = {
@@ -40,6 +43,7 @@ const textCase = 'uppercase';
 		  </style>
 	</head>
 	<body>
+		<Header />
 		<h1>{pageTitle}</h1>
 		<h2>... ¡Y mi nuevo sitio Astro!</h2>
 		<ul>
@@ -58,8 +62,9 @@ const textCase = 'uppercase';
 		{happy && <p>¡Estoy feliz de aprender Astro!</p>}
 		{finished && <p>¡He terminado este tutorial!</p>}
 		{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
-
-		<a href="/">Inicio</a>
-		<a href="/blog">Blog</a>
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
