--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,9 @@
 ---
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+import '../styles/global.css'
+
+
 const pageTitle = 'Mi Blog de Astro aprendizaje'
 ---
 
@@ -11,15 +16,17 @@ const pageTitle = 'Mi Blog de Astro aprendizaje'
 		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<Header />
 		<h1>{pageTitle}</h1>
 		<p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
-		<a href="/">Inicio</a>
-		<a href="/about">Sobre mi</a>
 		<ul>
 			<li><a href="/posts/post-1">Mi primera publicación</a></li>
 			<li><a href="/posts/post-2">Mi segunda publicación</a></li>
 			<li><a href="/posts/post-3">Mi tercera publicación</a></li>
 		</ul>
-		
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+	  </script>
 	</body>
 </html>
